Labs/disallow-privileged-containers/disallow-privileged-containers.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-privileged-containers
  annotations:
    policies.kyverno.io/title: Disallow Privileged Containers
    policies.kyverno.io/category: Pod Security Standards (Baseline)
    policies.kyverno.io/severity: Medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      Privileged mode disables most security mechanisms and must not be allowed. This policy
      ensures the fields spec.containers[*].securityContext.privileged and spec.initContainers[*].securityContext.privileged must be unset or set to `false`.
    policies.nirmata.io/remediation: "https://github.com/nirmata/kyverno-policies/tree/main/pod-security/baseline/disallow-privileged-containers/remediate-disallow-privileged-containers.yaml"
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: privileged-containers
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: >-
          Privileged mode is disallowed.
        pattern:
          spec:
            =(ephemeralContainers):
              - =(securityContext):
                  =(<setting>): <value>
#                  =(privileged): "false"
            =(initContainers):
              - =(securityContext):
                  =(<setting>): <value>
#                  =(privileged): "false"
            containers:
              - =(securityContext):
                  =(<setting>): <value>
#                  =(privileged): "false"

# Add the setting and value for the securityContext.privileged field
